--- a/styles/player.css
+++ b/styles/player.css
@@ -16,7 +16,7 @@ div.able-now-playing{
 }
 
 body{
-	background-image: url(/images/stardust.png);
+	background-image: url(../images/stardust.png);
 	background-repeat: repeat;
 }
 
@@ -113,7 +113,7 @@ span.icon-preferences, span.icon-faster, span.icon-slower{
 	border-top: 0px !important;
 	padding-top: 5px;
 	/*background-color: #464646;*/
-	background-image: url(/images/stardust.png);
+	background-image: url(../images/stardust.png);
 }
 
 .able-status{
