--- a/styles/player.css
+++ b/styles/player.css
@@ -104,6 +104,7 @@ span.icon-preferences, span.icon-faster, span.icon-slower{
 
 .able-controller button{
 	outline: 0px !important;
+	font-size: 13px !important;
 }
 
 .able-controller{
