--- a/styles/player.css
+++ b/styles/player.css
@@ -16,7 +16,8 @@ div.able-now-playing{
 }
 
 body{
-	background-image: url(../images/stardust.png);
+	/*background-image: url(../images/stardust.png);*/
+	background-color: #454349 !important;
 	background-repeat: repeat;
 }
 
@@ -114,8 +115,8 @@ span.icon-preferences, span.icon-faster, span.icon-slower{
 	border-bottom: 0px !important;
 	border-top: 0px !important;
 	padding-top: 5px;
-	/*background-color: #464646;*/
-	background-image: url(../images/stardust.png);
+	background-color: rgba(36, 36, 36, 0.7) !important;
+	/*background-image: url(../images/stardust.png);*/
 }
 
 .able-status{
@@ -134,3 +135,5 @@ span.icon-preferences, span.icon-faster, span.icon-slower{
 	color: #f2f2f2 !important;
 	display: none !important;
 }
+
+
