changed links to white

--- a/styles/player.css
+++ b/styles/player.css
@@ -20,10 +20,10 @@ div.able-now-playing{
 	background-color: #3373dc !important;
 }
 .tabs a, .tabs a:hover{
-	color: #3373dc;
+	color: #fff;
 }
 a, a:hover {
-	color: #3373dc;
+	color: #fff;
 }
 
 body{
