possible fix for white bar on certain devices.

--- a/styles/player.css
+++ b/styles/player.css
@@ -30,6 +30,7 @@ body{
 	/*background-image: url(../images/stardust.png);*/
 	background-color: #454349 !important;
 	background-repeat: repeat;
+	overflow: hidden;
 }
 
 .hero-body{
