possible fix for my possible fix for my possible fix

--- a/styles/player.css
+++ b/styles/player.css
@@ -1,3 +1,7 @@
+@media only screen and (max-device-width: 480px) {
+	zoom: 2;
+}
+
 @-webkit-keyframes buttonHover {
   from {-webkit-box-shadow: 0 0 0px 0px #3373dc; }
   50% {-webkit-box-shadow: 0 0 10px 4px #3373dc; }
