--- a/styles/player.css
+++ b/styles/player.css
@@ -104,7 +104,7 @@ span.icon-preferences, span.icon-faster, span.icon-slower{
 	border-radius: 0px 0px 5px 5px !important;
 }
 
-.scrolly{
+.scrollBox{
 	 background-color: #f2f2f2;
 	/*max-width:250px;*/
 	max-height:250px;
